<resources>
    <string name="app_name">MontañaApp</string>

    <string name="txt_welcome">¡Bienvenido!</string>
    <string name="txt_info">Ingresa tu información</string>
    <string name="txt_email">Correo electrónico</string>
    <string name="txt_pass">Contraseña</string>
    <string name="txt_forget">¿Olvidaste la contraseña?</string>
    <string name="txt_login_with">Inicia sesión con:</string>

    <string name="btn_login">Ingresar</string>

    <string name="chk_remember">Recuérdame</string>

    <string name="img_facebook">Facebook</string>
    <string name="img_github">GitHub</string>
    <string name="img_twitter">X</string>
</resources>