<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_primary"
        android:alpha="0.3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/white"/>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_welcome"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_info"
                android:alpha="0.7"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_email"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/done_icon"
                android:autofillHints=""/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pass"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/password_icon"
                android:autofillHints="" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chk_remember"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_forget"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_login"
                app:cornerRadius="32dp"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login_with"
                android:layout_gravity="center"
                android:alpha="0.7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/facebook"
                    android:contentDescription="@string/img_facebook" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/github"
                    android:contentDescription="@string/img_github" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/google"
                    android:contentDescription="@string/img_twitter" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>